--- a/package.json
+++ b/package.json
@@ -21,23 +21,28 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@fortawesome/fontawesome-free": "^5.7.1",
     "@ng-bootstrap/ng-bootstrap": "^4.0.1",
+    "@types/chart.js": "^2.7.42",
+    "angular-bootstrap-md": "^7.4.0",
     "angular-fusioncharts": "^3.0.0",
-    "chart.js": "^2.7.3",
+    "canvasjs": "^1.8.1",
+    "chart.js": "^2.5.0",
     "core-js": "^2.5.4",
     "fusioncharts": "^3.13.3-sr.1",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular-devkit/build-angular": "^0.13.1",
     "@angular/cli": "~7.1.4",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
